--- a/test/index.html
+++ b/test/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="../../ax5docs/assets/lib/jquery/jquery.min.js"></script>
-    <script src="../../ax5docs/assets/lib/ax5core/ax5core.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/ax5core/dist/ax5core.js"></script>
+
     <script src="../dist/ax5mask.js"></script>
     <link rel="stylesheet" type="text/css" href="../dist/ax5mask.css" />
 </head>
