--- a/test/index.html
+++ b/test/index.html
@@ -29,7 +29,7 @@
             });
         });
         $("#mask-close").click(function(){
-            mask.close();
+            mask.close(1000);
         });
     });
 </script>
