mask bugfix, modal css add button outline:0

--- a/test/index.html
+++ b/test/index.html
@@ -34,7 +34,7 @@
             mask.open({
                 templateName: 'customMask',
                 content: 'custom MASK on target',
-                target: $("#user-content").get(0),
+                //target: $("#user-content").get(0),
                 onClick: function(){
                     console.log(this);
                 }
@@ -51,7 +51,7 @@
             mask.open({
                 //position: "fixed",
                 content: 'MASK on target',
-                target: $("#user-content").get(0),
+                //target: $("#user-content").get(0),
                 onClick: function(){
                     console.log(this);
                 }
