ax5mask (엘리먼트 마스크, 리사이즈 버그픽스)

--- a/test/index.html
+++ b/test/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
 
-<div id="user-content" style="width:300px;height:300px;border: 1px solid #000;"></div>
+<div id="user-content" style="height:300px;border: 1px solid #000;"></div>
+
 <button type="button" id="mask-open">mask-open</button>
 <button type="button" id="mask-close">mask-close</button>
 <button type="button" id="custom-mask-open">custom-mask-open</button>
