PATCH@ add ax5mask to `align` method

--- a/test/index.html
+++ b/test/index.html
@@ -35,7 +35,7 @@
             mask.open({
                 templateName: 'customMask',
                 content: 'custom MASK on target',
-                //target: $("#user-content").get(0),
+                target: $("#user-content").get(0),
                 onClick: function(){
                     console.log(this);
                 }
