ax5ui-mask test

--- a/test/test.mask.html
+++ b/test/test.mask.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <title>ax5.mask.setConfig testing</title>
     <link href="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.css" rel="stylesheet"/>
-    <script type="text/javascript" src="https://cdn.rawgit.com/mochajs/mocha/2.2.5/mocha.js"></script>
-    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="bower_components/should/should.js"></script>
-    <script type="text/javascript" src="bower_components/lodash/lodash.js"></script>
-    <script src="bower_components/ax5core/dist/ax5core.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.1.2/mocha.min.css"/>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.1.2/mocha.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
+    <script type="text/javascript" src="https://cdn.rawgit.com/shouldjs/should.js/master/should.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
+    <script type="text/javascript" src="https://cdn.rawgit.com/ax5ui/ax5core/master/dist/ax5core.min.js"></script>
+
     <script src="../dist/ax5mask.js"></script>
     <link rel="stylesheet" type="text/css" href="../dist/ax5mask.css" />
 </head>
